namespace Battleship.Enums;

public enum PegType
{
    NONE,
    HIT,
    MISS
}
